...
    onSearchQueryChange: (String) -> Unit,
    onSearchFieldHeightPxChange: (Int) -> Unit,
    searchBarCollapsePx: Float
) {
    Box(
        Modifier
            .testTag("collapsibleSearchField")
            .clipToBounds()
            .layout { measurable, constraints ->
                val placeable = measurable.measure(constraints)
                val collapsePx = searchBarCollapsePx.coerceIn(0f, placeable.height.toFloat())
                val visibleHeight = placeable.height - collapsePx.roundToInt()
                layout(placeable.width, visibleHeight) {
...
